fixed font sizes to have legible font size(>=12px)

--- a/docs-web/src/main/webapp/src/style/bootstrap.css
+++ b/docs-web/src/main/webapp/src/style/bootstrap.css
@@ -272,7 +272,7 @@ th {
           box-sizing: border-box;
 }
 html {
-  font-size: 10px;
+  font-size: 12px;
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -452,7 +452,7 @@ h5 .small,
 .h5 .small,
 h6 .small,
 .h6 .small {
-  font-size: 75%;
+  font-size: 90%;
 }
 h1,
 .h1 {
@@ -494,7 +494,7 @@ p {
 }
 small,
 .small {
-  font-size: 85%;
+  font-size: 90%;
 }
 mark,
 .mark {
